--- a/yang/mandatory/Makefile.in
+++ b/yang/mandatory/Makefile.in
@@ -42,7 +42,7 @@ datarootdir     = @datarootdir@
 # See also YANG_INSTALLDIR for the clixon-specific yang files
 YANG_INSTALLDIR   = @YANG_INSTALLDIR@
 
-YANGSPECS  = ietf-inet-types@2020-07-06.yang
+YANGSPECS += ietf-inet-types@2020-07-06.yang
 YANGSPECS += ietf-netconf@2011-06-01.yang
 YANGSPECS += ietf-netconf-acm@2018-02-14.yang
 YANGSPECS += ietf-restconf@2017-01-26.yang
@@ -50,14 +50,13 @@ YANGSPECS += ietf-restconf-monitoring@2017-01-26.yang
 YANGSPECS += ietf-yang-library@2019-01-04.yang
 YANGSPECS += ietf-yang-types@2013-07-15.yang
 YANGSPECS += ietf-datastores@2018-02-14.yang
-<<<<<<< HEAD
 YANGSPECS += ietf-yang-patch@2017-02-22.yang
-=======
-YANGSPECS += ietf-netconf-list-pagination@2020-10-30.yang
 YANGSPECS += ietf-origin@2018-02-14.yang
 YANGSPECS += ietf-yang-metadata@2016-08-05.yang
 YANGSPECS += ietf-netconf-with-defaults@2011-06-01.yang
->>>>>>> Pagination draft
+# in draft-wwlh-netconf-list-pagination:
+YANGSPECS += ietf-netconf-list-pagination@2020-10-30.yang 
+
 
 all:	
 
