- Rewrite of netconf get/get-config code   - Unified get and get-config code to single function get_common   - Integrated list-pagination code   - Moved get code to new files backend_get.[ch]

--- a/apps/backend/Makefile.in
+++ b/apps/backend/Makefile.in
@@ -85,6 +85,7 @@ APPL	= clixon_backend
 APPSRC  = backend_main.c
 APPSRC += backend_socket.c
 APPSRC += backend_client.c
+APPSRC += backend_get.c
 APPSRC += backend_plugin_restconf.c # Pseudo plugin for restconf daemon
 APPSRC += backend_startup.c
 APPOBJ  = $(APPSRC:.c=.o)
